--- a/index.html
+++ b/index.html
@@ -190,16 +190,38 @@
                 ]
             }
         ];
+        
+        let imageCounter = 0;
+        const structuredPromptData = promptData.map(category => {
+            const newPrompts = category.prompts.map(prompt => {
+                const imageSrc = `image${imageCounter === 0 ? '' : imageCounter}.png`;
+                imageCounter++;
+                return {
+                    ...prompt,
+                    imageSrc: imageSrc
+                };
+            });
+            return {
+                ...category,
+                prompts: newPrompts
+            };
+        });
 
         // This is where all the magic happens
         document.addEventListener('DOMContentLoaded', () => {
             const categoryFilter = document.getElementById('category-filter');
             const promptContainer = document.getElementById('prompt-container');
             let copiedTimeout;
+            
+            // Add a null check for critical elements
+            if (!categoryFilter || !promptContainer) {
+                console.error("Critical error: Required DOM elements 'category-filter' or 'prompt-container' not found.");
+                return;
+            }
 
             // Populate the dropdown with categories
             function populateCategories() {
-                promptData.forEach(category => {
+                structuredPromptData.forEach(category => {
                     const option = document.createElement('option');
                     option.value = category.category;
                     option.textContent = category.category;
@@ -210,7 +232,7 @@
             // Render the prompts for the selected category
             function renderPrompts(selectedCategory) {
                 promptContainer.innerHTML = '';
-                const categoryData = promptData.find(c => c.category === selectedCategory);
+                const categoryData = structuredPromptData.find(c => c.category === selectedCategory);
 
                 if (!categoryData) return;
 
@@ -252,6 +274,19 @@
                                 <p class="text-gray-700 dark:text-gray-300 text-sm mt-2">${prompt.description}</p>
                             </div>
                         </div>
+                        <div class="mt-4">
+                            <button class="toggle-example-btn text-blue-500 font-medium hover:text-blue-600 transition-colors duration-200 flex items-center">
+                                Show Example
+                                <svg class="ml-2 w-4 h-4 transform transition-transform duration-200" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <polyline points="6 9 12 15 18 9" />
+                                </svg>
+                            </button>
+                            <div class="example-content hidden overflow-hidden transition-all duration-300">
+                                <div class="mt-2 rounded-lg overflow-hidden border border-gray-200 dark:border-gray-700">
+                                    <img src="${prompt.imageSrc}" alt="Descripción del ejemplo" class="w-full h-auto object-cover" />
+                                </div>
+                            </div>
+                        </div>
                     `;
                     promptsList.appendChild(promptCard);
                 });
@@ -284,32 +319,32 @@
                     });
                 });
 
-                document.querySelectorAll('.toggle-btn').forEach(button => {
+                document.querySelectorAll('.toggle-btn, .toggle-example-btn').forEach(button => {
                     button.addEventListener('click', (e) => {
-                        const descriptionContent = e.currentTarget.nextElementSibling;
+                        const content = e.currentTarget.nextElementSibling;
                         const arrowSvg = e.currentTarget.querySelector('svg');
-                        const isExpanded = descriptionContent.classList.contains('expanded');
+                        const isExpanded = content.classList.contains('expanded');
 
+                        // Toggle the content visibility
                         if (isExpanded) {
-                            descriptionContent.classList.remove('expanded');
-                            descriptionContent.classList.add('hidden');
+                            content.classList.remove('expanded');
+                            content.classList.add('hidden');
                             arrowSvg.style.transform = 'rotate(0deg)';
-                            e.currentTarget.textContent = 'Show Description';
-                            e.currentTarget.appendChild(arrowSvg);
+                            e.currentTarget.textContent = e.currentTarget.classList.contains('toggle-btn') ? 'Show Description' : 'Show Example';
                         } else {
-                            descriptionContent.classList.add('expanded');
-                            descriptionContent.classList.remove('hidden');
+                            content.classList.add('expanded');
+                            content.classList.remove('hidden');
                             arrowSvg.style.transform = 'rotate(180deg)';
-                            e.currentTarget.textContent = 'Hide Description';
-                            e.currentTarget.appendChild(arrowSvg);
+                            e.currentTarget.textContent = e.currentTarget.classList.contains('toggle-btn') ? 'Hide Description' : 'Hide Example';
                         }
+                        e.currentTarget.appendChild(arrowSvg);
                     });
                 });
             }
 
             // Initial render
             populateCategories();
-            renderPrompts(promptData[0].category);
+            renderPrompts(structuredPromptData[0].category);
 
             // Handle category change
             categoryFilter.addEventListener('change', (e) => {
@@ -319,3 +354,4 @@
     </script>
 </body>
 </html>
+
