--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     {
                         text: "Summarize Copilot usage trends across departments. Highlight which teams are accelerating adoption and which are lagging and what organizational factors might be influencing these patterns.",
                         description: "This prompt asks for an overview of how different departments are using Copilot, identifying which teams are quickly adopting the tool and which are behind. It also seeks insights into organizational reasons—such as leadership support, training efforts, or team workflows—that could explain these adoption patterns."
+                        <img src="image.png" alt="Descripción de la imagen" />"
                     },
                     {
                         text: "How many users are actively using Copilot each week, and how has this changed over time?",
